--- a/demo/style.css
+++ b/demo/style.css
@@ -18,7 +18,9 @@ body {
   padding: 24px;
   background-image: url(./pikachu.jpeg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: bottom right;
+  background-size: auto 70vh;
+  background-color: #F7DE82;
 }
 
 #title {
@@ -71,4 +73,36 @@ body {
   outline: none;
   user-select: none;
   margin-top: 30px;
+}
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+
+  0%,
+  100% {
+    transform: rotate(0)
+  }
+
+  20%,
+  60% {
+    transform: rotate(-25deg)
+  }
+
+  40%,
+  80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
 }
